crates/validator/tests/ui/conflicting_length_rules.stderr
error: `exact_length` cannot be combined with `min_length` or `max_length`
 --> tests/ui/conflicting_length_rules.rs:8:11
  |
8 |     name: String,
  |           ^^^^^^
